# snake-neural-network

./: README.md  agent.py  model.py  pyproject.toml
model/: model.pth  model_snake.pth
snake/: snake_game_robot.py
src/: __main__.py
src/snake/: __main__.py  agent.py  model.py  snake_game.py  snake_game_robot.py
tetris/: tetris_game.py
